Kubernetes/NetworkPolicy/service_ping1.yml
apiVersion: v1
kind: Service
metadata:
  name: dev-svc-ping1
  namespace: default
  labels:
    name: dev-svc-ping1
spec:
  type: NodePort
  selector:
    name: dev-pod-ping1
  ports:
    - port: 5001
      targetPort: 5001
      protocol: TCP
